--- a/html/agenda-ch.html
+++ b/html/agenda-ch.html
@@ -246,7 +246,7 @@
               媒体发布会
             </div>
             <div class="item-location">
-              Hilton Inn At Penn
+              Sheraton in University City
             </div>
             <div class="item-desc">
               由PWCS与沃顿商学院代表共同举办面向媒体朋友的新闻发布会
@@ -254,21 +254,7 @@
           </div>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              5:30PM - 8:00PM
-            </div>
-            <div class="item-title">
-              招聘会
-            </div>
-            <div class="item-location">
-              Hilton Inn at Penn
-            </div>
-            <div class="item-desc">
-              各大公司代表设置展台，与广大有需要的求职者交流。
-            </div>
-          </div>
-          <div class="agenda-item left-txt">
-            <div class="item-time">
-              6:00PM - 7:30PM
+              6:00PM - 8:00PM
             </div>
             <div class="item-title">
               职业发展论坛
@@ -282,7 +268,7 @@
           </div>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              6:30PM - 9:00PM
+              6:00PM - 9:00PM
             </div>
             <div class="item-title">
               VIP 晚宴
@@ -299,7 +285,8 @@
           <h2 class="agenda-date">四月十四日</h2>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              8:00AM - 10:00AM
+              8:00AM - 10:00AM<br/>
+              10:00AM - 1:00PM(延后注册)
             </div>
             <div class="item-title">
               观众注册
@@ -313,7 +300,7 @@
           </div>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              9:00AM - 11:30AM
+              9:00AM - 11:00AM
             </div>
             <div class="item-title">
               开幕式
@@ -334,7 +321,7 @@
               分论坛 1: 房地产板块
             </div>
             <div class="item-location">
-              Irvine Auditorium
+              Annenberg Center
             </div>
             <div class="item-desc">
               在这个充满机遇的时间节点，企业该如何实现从传统模式到新模式的平稳过渡？<br/>
@@ -342,13 +329,13 @@
               (将于近期揭晓)
             </div>
             <div class="item-title">
-              分论坛 2: 科技板块
+              分论坛 2: 金融市场板块
             </div>
             <div class="item-location">
-              Annenburg Center
+              Irvine Auditorium
             </div>
             <div class="item-desc">
-              以创新科技为核心的新产业将对传统行业造成怎样的冲击？<br/>
+              投资者们该如何驾驭中国市场持续的监管变化、科技产业动荡等多重因素？<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
               (将于近期揭晓)
             </div>
@@ -372,12 +359,26 @@
               分论坛 4: 国际关系板块
             </div>
             <div class="item-location">
-              Annenburg Center
+              Annenberg Center
             </div>
             <div class="item-desc">
               留学生应如何理解习主席和特朗普总统达成的共识以及“一代一路”的意义？<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
               (将于近期揭晓)
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              5:00PM - 7:30PM
+            </div>
+            <div class="item-title">
+              招聘会
+            </div>
+            <div class="item-location">
+              Annenberg Center
+            </div>
+            <div class="item-desc">
+              各大公司代表设置展台，与广大有需要的求职者交流。
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -416,31 +417,31 @@
               10:00AM - 12:00PM
             </div>
             <div class="item-title">
-              分论坛 5: 财经商业板块
+              分论坛 5: 社会责任板块
             </div>
             <div class="item-location">
-              Irvine Auditorium
-            </div>
-            <div class="item-desc">
-              投资者们该如何驾驭中国市场持续的监管变化、科技产业动荡等多重因素？<br/>
-              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
-              (将于近期揭晓)
-            </div>
-            <div class="item-title">
-              分论坛 6: 社会责任板块
-            </div>
-            <div class="item-location">
-              Annenburg Center
+              Annenberg Center
             </div>
             <div class="item-desc">
               企业家们如何看待企业可持续发展与社会责任，并对未来有怎样的展望？<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
               (将于近期揭晓)
             </div>
+            <div class="item-title">
+              分论坛 6: 新兴科技板块
+            </div>
+            <div class="item-location">
+              Irvine Auditorium
+            </div>
+            <div class="item-desc">
+              以创新科技为核心的新产业将对传统行业造成怎样的冲击？<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">嘉宾</span><br/>
+              (将于近期揭晓)
+            </div>
           </div>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              1:30PM - 3:30PM
+              12:30PM - 3:15PM
             </div>
             <div class="item-title">
               闭幕式
