--- a/html/agenda.html
+++ b/html/agenda.html
@@ -246,24 +246,10 @@
               Media Conference
             </div>
             <div class="item-location">
-              Hilton Inn At Penn
+              Sheraton in University City
             </div>
             <div class="item-desc">
               Hosted by PWCS and Representatives from the Wharton School. An opportunity for media to ask questions.
-            </div>
-          </div>
-          <div class="agenda-item left-txt">
-            <div class="item-time">
-              5:30PM - 8:00PM
-            </div>
-            <div class="item-title">
-              Career Fair
-            </div>
-            <div class="item-location">
-              Hilton Inn at Penn
-            </div>
-            <div class="item-desc">
-              Company Representatives to set up booths. Open to registered audience.
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -282,7 +268,7 @@
           </div>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              6:30PM - 9:00PM
+              6:00PM - 9:00PM
             </div>
             <div class="item-title">
               VIP Banquet
@@ -299,7 +285,8 @@
           <h2 class="agenda-date">April 14th</h2>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              8:00AM - 10:00AM
+              8:00AM - 10:00AM<br/>
+              10:00AM - 1:00PM (Delayed Registration)
             </div>
             <div class="item-title">
               General Registration
@@ -313,7 +300,7 @@
           </div>
           <div class="agenda-item left-txt">
             <div class="item-time">
-              9:00AM - 11:30AM
+              9:00AM - 11:00AM
             </div>
             <div class="item-title">
               Openning Ceremony
@@ -334,7 +321,7 @@
               PANEL 1: Real Estate
             </div>
             <div class="item-location">
-              Irvine Auditorium
+              Annenberg Center
             </div>
             <div class="item-desc">
               In this pivotal moment of transformation, how should the traditional real estate industry adjust smoothly into this new era, and how should companies adapt based on their unique characteristics instead of blindly following the trend?<br/>
@@ -342,13 +329,13 @@
               (To Be Announced)
             </div>
             <div class="item-title">
-              PANEL 2: New Technology
+              PANEL 2: Finance
             </div>
             <div class="item-location">
-              Annenburg Center
+              Irvine Auditorium
             </div>
             <div class="item-desc">
-              How will new forces shape the trajectories of technology development in China and in the world? As college students, how should we leverage surrounding opportunities to make a dent in the universe?<br/>
+              With continuous regulatory changes, constant technological industry disruptions, and rising valuations across major asset classes, how can global investors better navigate the volatile but evolving Chinese market and economy?<br/>
               <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
               (To Be Announced)
             </div>
@@ -372,7 +359,7 @@
               PANEL 4: International Relations
             </div>
             <div class="item-location">
-              Annenburg Center
+              Annenberg Center
             </div>
             <div class="item-desc">
               In today's world, how should students make sense of the consensus between the two presidents of China and the U.S. as well as the significance of the Belt and Road initiative?<br/>
@@ -392,6 +379,20 @@
             </div>
             <div class="item-desc">
               A thought-provoking conversation between startup teams, guests, and professors. Innotalk is a wonderful opportunity for anyone interested in learning about the exciting world of startups.<br/>
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              5:00PM - 7:30PM
+            </div>
+            <div class="item-title">
+              Career Fair
+            </div>
+            <div class="item-location">
+              Annenberg Center
+            </div>
+            <div class="item-desc">
+              Company Representatives to set up booths. Open to registered audience.
             </div>
           </div>
           <div class="agenda-item left-txt">
@@ -416,21 +417,10 @@
               10:00AM - 12:00PM
             </div>
             <div class="item-title">
-              PANEL 5: Finance
+              PANEL 5: Social Responsibility
             </div>
             <div class="item-location">
-              Irvine Auditorium
-            </div>
-            <div class="item-desc">
-              With continuous regulatory changes, constant technological industry disruptions, and rising valuations across major asset classes, how can global investors better navigate the volatile but evolving Chinese market and economy?<br/>
-              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
-              (To Be Announced)
-            </div>
-            <div class="item-title">
-              PANEL 6: Social Responsibility
-            </div>
-            <div class="item-location">
-              Annenburg Center
+              Annenberg Center
             </div>
             <div class="item-desc">
               What are the thoughts of outstanding entrepreneurs on the status, problems, solutions, and future prospects of sustainable development and social responsibility of Chinese enterprises?<br/>
@@ -439,6 +429,17 @@
             </div>
           </div>
           <div class="agenda-item left-txt">
+            <div class="item-title">
+              PANEL 6: New Technology
+            </div>
+            <div class="item-location">
+              Irvine Auditorium
+            </div>
+            <div class="item-desc">
+              How will new forces shape the trajectories of technology development in China and in the world? As college students, how should we leverage surrounding opportunities to make a dent in the universe?<br/>
+              <span style="font-family: avn-demi, pf-heavy, pf-medium">Speakers:</span><br/>
+              (To Be Announced)
+            </div>
             <div class="item-time">
               1:30PM - 3:30PM
             </div>
