--- a/html/home.html
+++ b/html/home.html
@@ -637,7 +637,7 @@
       		<div class="direction-r">
       			<div class="flag-wrapper">
       				<span class="flag">InnoTalk</span>
-      				<span class="time-wrapper"><span class="time">4/13 18:00-20:00</span></span>
+      				<span class="time-wrapper"><span class="time">4/14 7:00PM-9:00PM</span></span>
       			</div>
       			<div class="desc">A thought-provoking conversation between startup teams, guests, and professors. Innotalk is a wonderful opportunity for anyone interested in learning about the exciting world of startups. </div>
       		</div>
@@ -648,7 +648,7 @@
       		<div class="direction-l">
       			<div class="flag-wrapper">
       				<span class="flag">Career Panel</span>
-      				<span class="time-wrapper"><span class="time">4/14 18:00-20:00</span></span>
+      				<span class="time-wrapper"><span class="time">4/13 6:00PM-8:00PM</span></span>
       			</div>
       			<div class="desc">An excellent speed-dating opportunity for companies and job seekers. Bring your resumes and talk with the Human Resource representatives at the desks.</div>
       		</div>
@@ -659,7 +659,7 @@
       		<div class="direction-r">
       			<div class="flag-wrapper">
       				<span class="flag">Social Event</span>
-      				<span class="time-wrapper"><span class="time">4/14 20:00-23:00</span></span>
+      				<span class="time-wrapper"><span class="time">4/14 8:00PM-11:00PM</span></span>
       			</div>
       			<div class="desc">A mixer at Ritz-Carlton Hotel (subject to changes) that we host each year. Drinks are provided and will be loads of fun! Good opportunity to mingle and relax with your peers.</div>
       		</div>
