--- a/html/home-ch.html
+++ b/html/home-ch.html
@@ -648,7 +648,7 @@
       		<div class="direction-r">
       			<div class="flag-wrapper">
       				<span class="flag">创业对话</span>
-      				<span class="time-wrapper"><span class="time">4/13 18:00-20:00</span></span>
+      				<span class="time-wrapper"><span class="time">4/14 7:00PM-9:00PM</span></span>
       			</div>
       			<div class="desc">顶尖的创业团队们与经验丰富的评委和知识渊博的教授能碰撞出怎样的火花？如果你对创业有兴趣，这个机会不容错过！</div>
       		</div>
@@ -659,7 +659,7 @@
       		<div class="direction-l">
       			<div class="flag-wrapper">
       				<span class="flag">企业招聘会</span>
-      				<span class="time-wrapper"><span class="time">4/14 15:00-17:00</span></span>
+      				<span class="time-wrapper"><span class="time">4/13 6:00PM-8:00PM</span></span>
       			</div>
       			<div class="desc">专为有梦想的年轻人搭建的招聘平台！</div>
       		</div>
@@ -670,7 +670,7 @@
       		<div class="direction-r">
       			<div class="flag-wrapper">
       				<span class="flag">社会活动</span>
-      				<span class="time-wrapper"><span class="time">4/14 20:00-23:00</span></span>
+      				<span class="time-wrapper"><span class="time">4/14 8:00PM-11:00PM</span></span>
       			</div>
       			<div class="desc">一年一度在利兹卡尔顿酒店的交流活动，有专供饮品和许多娱乐活动！与同伴们放松畅谈的好时机！</div>
       		</div>
